Correção bibliotecas obsoletas -> refs #design

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                                             style="font-size: 10px; margin-right: 3%; text-align: right;"><a>Esqueci minha senha</a></small>
                                 </div>
                                 <div class="col-md-6" style="border-radius: 30px; margin-top: 25px; margin-left: 25%">
-                                <button type="submit" class="btn btn-primary btn-block" href="./dashboard.html">Login</button>
+                                <button type="submit" [routerLink]="['/dashboard']" class="btn btn-primary btn-block" href="./dashboard.html">Login</button>
                                 </div>
                             </div>
                         </form>
