--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,10 @@
   <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>
-    X-BOT® - Painel
-  </title>
+  <title>Login</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
     name='viewport' />
-  <!--     Fonts and icons    -->
+  <!--  Fonts and icons  -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -22,153 +20,60 @@
   <link href="../assets/demo/demo.css" rel="stylesheet" />
 </head>
 
-<body class="">
-  <div class="wrapper ">
-    <div class="sidebar" data-color="green">
-      <!--
-        Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
-    -->
-      <div class="logo" style="text-align: center;">
-        <a href="http://www.creative-tim.com" class="simple-text logo-mini">
-          <img src="../assets/img/icon-sidebar.png">
-        </a>
-        <a href="http://www.creative-tim.com" class="simple-text logo-normal">
-          <b>X-BOT</b><br> Criador de chatbots
-        </a>
-      </div>
-      <div class="sidebar-wrapper" id="sidebar-wrapper">
-        <ul class="nav">
-          <li class="active ">
-            <a href="./dashboard.html">
-              <i class="now-ui-icons business_chart-bar-32"></i>
-              <p>Painel</p>
-            </a>
-          </li>
-          <li>
-            <a href="./icons.html">
-              <i class="now-ui-icons objects_key-25"></i>
-              <p>Administração</p>
-            </a>
-          </li>
-          <li>
-            <a href="./notifications.html">
-              <i class="now-ui-icons ui-1_send"></i>
-              <p>Funcionalidades</p>
-            </a>
-          </li>
-          <li>
-            <a href="./user.html">
-              <i class="now-ui-icons design_bullet-list-67"></i>
-              <p>Projetos</p>
-            </a>
-          </li>
-          <li class="active-pro">
-            <a href="./upgrade.html">
-              <i class="now-ui-icons arrows-1_cloud-download-93"></i>
-              <p>Sincronizar dados</p>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="main-panel" id="main-panel">
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-transparent  bg-primary  navbar-absolute">
-        <div class="container-fluid">
-          <div class="navbar-wrapper">
-            <div class="navbar-toggle">
-              <button type="button" class="navbar-toggler">
-                <span class="navbar-toggler-bar bar1"></span>
-                <span class="navbar-toggler-bar bar2"></span>
-                <span class="navbar-toggler-bar bar3"></span>
-              </button>
-            </div>
-            <a class="navbar-brand" href="#pablo">Painel</a>
+<body class="body">
+  <div class="content">
+    <div class="row">
+      <div class="col-md-8">
+        <div class="card" style="margin-left: 52%; margin-top: 20%; width: 50%;">
+          <div class="card-header">
+            <h5 style="text-align: center;" class="title">Login</h5>
           </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
-            aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <form>
-              <div class="input-group no-border">
-                <input type="text" value="" class="form-control" placeholder="Pesquisar...">
-                <div class="input-group-append">
-                  <div class="input-group-text">
-                    <i class="now-ui-icons ui-1_zoom-bold"></i>
+          <div class="card-body">
+            <form [formGroup]="userForm">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label style="font-size: 13px;">Usuário</label>
+                    <input formControlName="UserName" type="text" class="form-control"
+                      placeholder="Digite o seu usuário" #UserName />
                   </div>
+                  <ng-template
+                    *ngIf="userForm.controls['UserName'].invalid && (userForm.controls['UserName'].dirty || userForm.controls['UserName'].touched)">
+                    <div class="alert alert-danger">
+                      <div *ngIf="userForm.controls['UserName'].errors.required">
+                        Por favor, digite o usuário.
+                      </div>
+                    </div>
+                  </ng-template>
+                </div>
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label style="font-size: 13px;">Senha</label>
+                    <input formControlName="UserPassword" type="password" class="form-control"
+                      placeholder="Digite a sua senha" #UserPassword />
+                    <small id="emailHelp" class="form-text text-muted" style="font-size: 10px; margin-left: 3%;">Não
+                      compartilhe a sua senha com
+                      ninguém.</small>
+                  </div>
+                  <ng-template
+                    *ngIf="userForm.controls['UserPassword'].invalid && (userForm.controls['UserPassword'].dirty || userForm.controls['UserPassword'].touched)">
+                    <div class="alert alert-danger">
+                      <div *ngIf="userForm.controls['UserPassword'].errors.required">
+                        Por favor, digite a senha.
+                      </div>
+                    </div>
+                  </ng-template>
+                </div>
+                <div class="col-md-6" style="border-radius: 30px; margin-top: 25px; margin-left: 25%">
+                  <button [disabled]="userForm.pristine || userForm.invalid"
+                    (click)="loginUser(UserName.value, UserPassword.value)" type="submit"
+                    class="btn btn-primary btn-block">Login</button>
                 </div>
               </div>
             </form>
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#pablo">
-                  <i class="now-ui-icons media-2_sound-wave"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Stats</span>
-                  </p>
-                </a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  <i class="now-ui-icons location_world"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Some Actions</span>
-                  </p>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#pablo">
-                  <i class="now-ui-icons users_single-02"></i>
-                  <p>
-                    <span>Olá, @Nome!</span>
-                    <span class="d-lg-none d-md-block">Account</span>
-                  </p>
-                </a>
-              </li>
-            </ul>
           </div>
         </div>
-      </nav>
-      <router-outlet></router-outlet>
-      <footer class="footer">
-        <div class="container-fluid">
-          <nav>
-            <ul>
-              <li>
-                <a href="https://www.creative-tim.com">
-                  Creative Tim
-                </a>
-              </li>
-              <li>
-                <a href="http://presentation.creative-tim.com">
-                  About Us
-                </a>
-              </li>
-              <li>
-                <a href="http://blog.creative-tim.com">
-                  Blog
-                </a>
-              </li>
-            </ul>
-          </nav>
-          </nav>
-          <div class="copyright" id="copyright" style="text-align: right;">
-            X-BOT® | Criador de chatbots<br>
-            &copy;
-            <script>
-              document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-            </script>, X-Testing.
-          </div>
-      </footer>
+      </div>
     </div>
   </div>
   <!--   Core JS Files   -->
@@ -186,13 +91,6 @@
   <script src="../assets/js/now-ui-dashboard.min.js?v=1.3.0" type="text/javascript"></script>
   <!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
   <script src="../assets/demo/demo.js"></script>
-  <script>
-    $(document).ready(function () {
-      // Javascript method's body can be found in assets/js/demos.js
-      demo.initDashboardPageCharts();
-
-    });
-  </script>
 </body>
 
 </html>
