--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                 <div class="col-md-12">
                   <div class="form-group">
                     <label style="font-size: 13px;">Usuário</label>
-                    <input formControlName="UserName" type="text" class="form-control"
+                    <input formControlName="UserName" type="name" class="form-control"
                       placeholder="Digite o seu usuário" #UserName />
                   </div>
                   <ng-template
