Correção de parâmetros.

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <link href="../assets/demo/demo.css" rel="stylesheet" />
 </head>
 
-<body class="">
+<body>
   <div class="wrapper">
 
     <!-- Sidebar Lateral -->
