commit final de semana

--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
                 <a class="nav-link" href="#pablo">
                   <i class="now-ui-icons users_single-02"></i>
                   <p>
-                    <span>Olá, @Nome!</span>
+                    <span>Olá, {{ user }}!</span>
                     <span class="d-lg-none d-md-block">Account</span>
                   </p>
                 </a>
